SSC-XX fix video truncate in modal

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-bootstrap-3-3-7/less/modals-custom.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-bootstrap-3-3-7/less/modals-custom.less
@@ -43,8 +43,7 @@
     outline: 0;
 
     @media (min-width: @screen-md-min) {
-        top: 50%;
-        transform: translate(0 , -50%);
+        top: 15%;
     }
 
     .modal-header, .modal-body {
